# hybrid-sentinel

./: .gitignore  CLAUDE.md  Dockerfile  README.md  Real-Time AI Transaction Anomaly Detection & Agentic Investigation.md  pyproject.toml  skills-lock.json
.agents/skills/openspec-reference/: VALIDATION_PATTERNS.md
.claude/: mcp.json
.claude/commands/: code-review.md
docs/: stream-processing.md
openspec/: ROADMAP.md
openspec/changes/add-agent-investigation/: design.md  proposal.md  tasks.md
openspec/changes/add-stream-processing/: proposal.md
openspec/specs/anomaly-detection/: spec.md
openspec/specs/api-ingestion/: spec.md
openspec/specs/project-structure/: spec.md
openspec/specs/stream-processing/: spec.md
src/hybrid_sentinel/: __init__.py  config.py  event_bus.py  main.py  models.py
src/hybrid_sentinel/agent/: __init__.py  alerts.py  context.py  graph.py  nodes.py  state.py  store.py
src/hybrid_sentinel/anomaly/: __init__.py  classify.py  drift.py  features.py  scorer.py
src/hybrid_sentinel/routes/: anomalies.py  cases.py  webhooks.py
src/hybrid_sentinel/stream/: __init__.py  dataflow.py  processor.py  sink.py  source.py
tests/: conftest.py  test_agent_context.py  test_agent_graph.py  test_agent_lifecycle.py  test_agent_nodes.py  test_anomaly_integration.py  test_anomaly_routes.py  test_cases.py  test_classify.py  test_drift.py  test_end_to_end.py  test_event_bus.py  test_features.py  test_health.py  test_integration.py  test_models.py  test_processor.py  test_scorer.py  test_scorer_integration.py  test_sink_scoring_bus.py  test_webhooks.py
(+21 files in other folders)
